--- a/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
+++ b/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
@@ -58,16 +58,85 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddRestaurant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddRestaurant.Designer.cs">
+      <DependentUpon>AddRestaurant.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminForm.Designer.cs">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DeleteRestaurant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleteRestaurant.Designer.cs">
+      <DependentUpon>DeleteRestaurant.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FavRest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FavRest.Designer.cs">
+      <DependentUpon>FavRest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="OwnerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OwnerForm.Designer.cs">
+      <DependentUpon>OwnerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatedRest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RatedRest.Designer.cs">
+      <DependentUpon>RatedRest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RestList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RestList.Designer.cs">
+      <DependentUpon>RestList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserForm.Designer.cs">
+      <DependentUpon>UserForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewRates.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewRates.Designer.cs">
+      <DependentUpon>ViewRates.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AddRestaurant.resx">
+      <DependentUpon>AddRestaurant.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminForm.resx">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeleteRestaurant.resx">
+      <DependentUpon>DeleteRestaurant.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FavRest.resx">
+      <DependentUpon>FavRest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OwnerForm.resx">
+      <DependentUpon>OwnerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -79,6 +148,18 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RatedRest.resx">
+      <DependentUpon>RatedRest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RestList.resx">
+      <DependentUpon>RestList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserForm.resx">
+      <DependentUpon>UserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewRates.resx">
+      <DependentUpon>ViewRates.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -98,6 +179,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+    <None Include="Resources\kisspng-arrow-computer-icons-clip-art-scalable-vector-grap-return-arrow-svg-png-icon-free-download-72268-5cd6cd8be41546.5477184415575811959342.jpg" />
+    <None Include="Resources\atsisiųsti1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets')" />
