Sukuriau klase dataBase metodams iskviesti. Butu gerai ja naudoti kad pagrindinis kodas butu grazesnis. Taip pat lengviau paskui bus perkelt visa logika

--- a/PrototypeDemo/LoginHandling/LoginHandling.csproj
+++ b/PrototypeDemo/LoginHandling/LoginHandling.csproj
@@ -60,6 +60,7 @@
     <Compile Include="AdminWindow.Designer.cs">
       <DependentUpon>AdminWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataBase.cs" />
     <Compile Include="RegisterWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +82,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdminWindow.resx">
+      <DependentUpon>AdminWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegisterWindow.resx">
       <DependentUpon>RegisterWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,7 +106,9 @@
     <Content Include="bin\Debug\MoodfullDataBase.sqlite3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
