--- a/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
+++ b/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\SQLite.3.13.0\build\net45\SQLite.props" Condition="Exists('..\packages\SQLite.3.13.0\build\net45\SQLite.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,6 +46,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.111.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SQLite.Core.1.0.111.0\lib\net451\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,10 +82,11 @@
     <Compile Include="DeleteRestaurant.Designer.cs">
       <DependentUpon>DeleteRestaurant.cs</DependentUpon>
     </Compile>
-    <Compile Include="FavRest.cs">
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="UserPanel\FavRest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FavRest.Designer.cs">
+    <Compile Include="UserPanel\FavRest.Designer.cs">
       <DependentUpon>FavRest.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -96,22 +103,28 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RatedRest.cs">
+    <Compile Include="UserPanel\RatedRest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RatedRest.Designer.cs">
+    <Compile Include="UserPanel\RatedRest.Designer.cs">
       <DependentUpon>RatedRest.cs</DependentUpon>
     </Compile>
-    <Compile Include="RestList.cs">
+    <Compile Include="UserPanel\RestList.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RestList.Designer.cs">
+    <Compile Include="UserPanel\RestList.Designer.cs">
       <DependentUpon>RestList.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserForm.cs">
+    <Compile Include="UserPanel\RestRating.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UserForm.Designer.cs">
+    <Compile Include="UserPanel\RestRating.designer.cs">
+      <DependentUpon>RestRating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserPanel\UserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserPanel\UserForm.Designer.cs">
       <DependentUpon>UserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewRates.cs">
@@ -129,7 +142,7 @@
     <EmbeddedResource Include="DeleteRestaurant.resx">
       <DependentUpon>DeleteRestaurant.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FavRest.resx">
+    <EmbeddedResource Include="UserPanel\FavRest.resx">
       <DependentUpon>FavRest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
@@ -148,13 +161,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RatedRest.resx">
+    <EmbeddedResource Include="UserPanel\RatedRest.resx">
       <DependentUpon>RatedRest.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RestList.resx">
+    <EmbeddedResource Include="UserPanel\RestList.resx">
       <DependentUpon>RestList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserForm.resx">
+    <EmbeddedResource Include="UserPanel\RestRating.resx">
+      <DependentUpon>RestRating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserPanel\UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewRates.resx">
@@ -182,6 +198,10 @@
     <None Include="Resources\kisspng-arrow-computer-icons-clip-art-scalable-vector-grap-return-arrow-svg-png-icon-free-download-72268-5cd6cd8be41546.5477184415575811959342.jpg" />
     <None Include="Resources\atsisiųsti1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -189,7 +209,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets'))" />
+    <Error Condition="!Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets'))" />
+    <Error Condition="!Exists('..\packages\SQLite.3.13.0\build\net45\SQLite.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SQLite.3.13.0\build\net45\SQLite.props'))" />
   </Target>
+  <Import Project="..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
