Fixed database. Added MoodRating to the main demo version.

--- a/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
+++ b/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>DeleteRestaurant.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\Restaurant.cs" />
     <Compile Include="UserPanel\FavRest.cs">
       <SubType>Form</SubType>
     </Compile>
