Patvarkytos biski admin formos , funkcianolumo įdėta. Parašyti metodai kurie pasiima visa data iš Restaurant lentelės duombazėj, sudeda juos y listą ir parodo juos consolėj.

--- a/PrototypeDemo/LoginHandling/LoginHandling.csproj
+++ b/PrototypeDemo/LoginHandling/LoginHandling.csproj
@@ -60,6 +60,7 @@
     <Compile Include="AdminWindow.Designer.cs">
       <DependentUpon>AdminWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Evaluation.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="RegisterWindow.cs">
       <SubType>Form</SubType>
