added regex and extension method

--- a/PrototypeDemo/LoginHandling/LoginHandling.csproj
+++ b/PrototypeDemo/LoginHandling/LoginHandling.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="Evaluation.cs" />
     <Compile Include="DataBase.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="RegisterWindow.cs">
       <SubType>Form</SubType>
     </Compile>
