Owner formoj padarytas proper rating view, kur galima pasirinkt restoranaą ir išmes jo visus evaluation iš list - įgyvendintas vienas iš reikalavimų.

--- a/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
+++ b/PrototypeDemo/PrototypeDemo/PrototypeDemo.csproj
@@ -99,6 +99,7 @@
     <Compile Include="DeleteRestaurant.Designer.cs">
       <DependentUpon>DeleteRestaurant.cs</DependentUpon>
     </Compile>
+    <Compile Include="Evaluation.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="UserPanel\FavRest.cs">
