--- a/PrototypeDemo/UnitTests/UnitTests.csproj
+++ b/PrototypeDemo/UnitTests/UnitTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="DataBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LoginHandling\LoginHandling.csproj">
